--- a/cssMain.css
+++ b/cssMain.css
@@ -1,18 +1,29 @@
-body {          
-    margin: 0;
-    background-color: cadetblue;               
+body {
+    background-color: black;
+    position: absolute;    
+    background-image: url(https://www.sciencesetavenir.fr/assets/img/2021/05/28/cover-r4x3w1000-60b0f1a04ad6b-y-a-gagarin.jpg);
+    position: fixed;
+    background-size: cover;          
   }
 
 #aside {
     border: solid;
     border-radius: 50px;
-    border-color: rgba(43, 49, 73, 0.5);
-    background-color: rgb(64, 75, 126, 0.5);
-    text-align: center;
+    background-color: rgba(255, 255, 255, 0.3);
+    border-color: rgba(255, 255, 255, 0.3);
     justify-content: center;
     align-items: center;
     display:flex;
-    color:rgb(200, 208, 235);
+    color:rgb(255, 255, 255);
     width: 300px;
     height: 800px;
+    margin-top: 50px;
+    margin-left: 50px;
+    overflow: auto;
+}
+
+p {
+  padding: 10px;
+  font-family: Arial;
+  font-weight: bold;
 }
